--- a/app/views/shared/frontend/_navbar.html.erb
+++ b/app/views/shared/frontend/_navbar.html.erb
@@ -13,26 +13,23 @@
 
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
-      <a class="navbar-item">
-        Home
+      <a class="navbar-item is-size-5">
+        訂單管理
       </a>
 
-      <a class="navbar-item">
-        Documentation
+      <a class="navbar-item is-size-5">
+        月結算表
       </a>
 
       <div class="navbar-item has-dropdown is-hoverable">
-        <a class="navbar-link">
-          More
+        <a class="navbar-link is-size-5">
+          資料管理
         </a>
 
         <div class="navbar-dropdown">
-          <a class="navbar-item">
-            About
-          </a>
-          <a class="navbar-item">
-            Jobs
-          </a>
+          <%= link_to '客戶資料管理', customers_path, class: 'navbar-item is-size-6' %>
+          <hr class="navbar-divider">
+          <%= link_to '區域資料管理', areas_path, class: 'navbar-item is-size-6' %>
           <a class="navbar-item">
             Contact
           </a>
