add Product CRUD

--- a/app/views/shared/frontend/_navbar.html.erb
+++ b/app/views/shared/frontend/_navbar.html.erb
@@ -27,15 +27,9 @@
         </a>
 
         <div class="navbar-dropdown">
-          <%= link_to '客戶資料管理', customers_path, class: 'navbar-item is-size-6' %>
-          <hr class="navbar-divider">
-          <%= link_to '區域資料管理', areas_path, class: 'navbar-item is-size-6' %>
-          <a class="navbar-item">
-            Contact
-          </a>
-          <hr class="navbar-divider">
-          <a class="navbar-item">
-            Report an issue
+          <%= link_to '客戶資料', customers_path, class: 'navbar-item is-size-5' %>
+          <%= link_to '區域資料', areas_path, class: 'navbar-item is-size-5' %>
+          <%= link_to '商品資料', products_path, class: 'navbar-item is-size-5' %>
           </a>
         </div>
       </div>
