add Order CRUD(WIP)

--- a/app/views/shared/frontend/_navbar.html.erb
+++ b/app/views/shared/frontend/_navbar.html.erb
@@ -13,10 +13,7 @@
 
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
-      <a class="navbar-item is-size-5">
-        訂單管理
-      </a>
-
+      <%= link_to '訂單管理', orders_path, class: 'navbar-item is-size-5' %>
       <a class="navbar-item is-size-5">
         月結算表
       </a>
