add Order CRUD and AASM state

--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -40,7 +40,7 @@
         <span>儲存</span>
       <% end %>
 
-      <%= link_to customers_path, class: 'button is-light is-medium' do %>
+      <%= link_to orders_path, class: 'button is-light is-medium' do %>
         <span class="icon is-small">
           <i class="fas fa-undo"></i>
         </span>
