--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -1,6 +1,8 @@
 <div class="columns is-centered">
   <div class="column is-four-fifths">
-    <h1 class="title">編輯訂單</h1>
+    <h2 class="title">訂單狀態
+      <%= content_tag :span, @order.aasm_state, class: "tag is-medium is-warning" %>
+    </h2>
     <%= render 'form', order: @order %>
   </div>
 </div>
