--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -21,3 +21,44 @@
     </p>
   </div>
 </nav>
+
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col" class="is-size-5">編號</th>
+      <th scope="col" class="is-size-5">日期</th>
+      <th scope="col" class="is-size-5">客戶</th>
+      <th scope="col" class="is-size-5">狀態</th>
+      <th scope="col" class="is-size-5">應收帳款</th>
+      <th scope="col" class="is-size-5">實收帳款</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @orders.each do |order| %>
+      <tr>
+        <td class="is-size-5"><%= order.number %></td>
+        <td class="is-size-5"><%= order.delivered_at %></td>
+        <td class="is-size-5"><%= order.customer.name %></td>
+        <td class="is-size-5"><%= order.aasm_state %></td>
+        <td class="is-size-5"><%= order.receivable %></td>
+        <td class="is-size-5"><%= order.paid %></td>
+        <td>
+          <%= link_to edit_order_path(order), class: 'button is-info is-small' do %>
+            <span class="icon is-small">
+              <i class="fas fa-edit"></i>
+            </span>
+            <span class="is-size-6">編輯</span>
+          <% end %>
+
+          <%= link_to order, method: 'delete', class: 'button is-danger is-small', data: { confirm: '確定要刪除嗎？' } do %>
+            <span class="icon is-small">
+              <i class="fas fa-trash-alt"></i>
+            </span>
+            <span class="is-size-6">刪除</span>
+          <% end %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
